Fix: safe area mobile alignment

--- a/src/style/content/catalogheader.css
+++ b/src/style/content/catalogheader.css
@@ -27,7 +27,7 @@
   .catalog-box::before{
     position: absolute;
     content: "";
-    inset: 0;
+    inset: s0;
     width: 25%;
     left: 0;
     top: 0;
@@ -40,8 +40,6 @@
   }
   
   .catalog-divider {
-    margin-left: -200px;
-    margin-right: -200px;
     box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, 0.2);
     border-bottom: 1px solid #0000;
   }
