--- a/src/style/content/fixedtopbar.css
+++ b/src/style/content/fixedtopbar.css
@@ -9,8 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: -200px;
-    margin-right: -200px;
+
   }
   
   .top-bar-text {
