--- a/src/style/content/resultgrid.css
+++ b/src/style/content/resultgrid.css
@@ -4,3 +4,9 @@
     justify-content: center;
     grid-template-columns: repeat(7, 1fr);
   }
+
+@media screen and (max-width: 800px) {
+.result{
+    grid-template-columns: repeat(2, 1fr);
+}
+}
