--- a/src/style/layout.css
+++ b/src/style/layout.css
@@ -8,8 +8,7 @@ html {
   scroll-behavior: smooth;
   font-size: 1.5rem;
   height: 100%;
-  padding-left: 200px; /* Left safe space */
-  padding-right: 200px; /* Right safe space */
+
 }
 
 body {
@@ -27,11 +26,20 @@ body {
   display: flex;
   justify-content: space-evenly;
   bottom: 0;
-  margin-left: -200px;
-  margin-right: -200px;
+}
+
+@media screen and (min-widt:800px ) {
+  .safe-container {
+    padding-left: 200px;
+    padding-right: 200px;
+  }
 }
 
 @media screen and (max-width: 800px) {
+  .safe-container {
+    padding-left: 14px;
+    padding-right: 14px;
+  }
   .footer {
     flex-shrink: 0;
     line-height: 200%;
